--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\gokul\\Anaconda3\\envs\\pyqt1\\python.exe"
+    "python.pythonPath": "C:\\Users\\gokul\\Anaconda3\\python.exe"
 }
